CHANGELOG

2.0.0
- New Owner!
- Updated to Spigot 1.15

1.3.0 (08/02/2014):
- Added config option BEACON_UNLIMITED_PERMANENT
    If true, players with "wp.beacon.unlimited" will be given a Waypoint Beacon if they don't have one
      Players with this permission will not be able to drop or move their beacons into other inventories
- Added permission node "wp.instant", which grants players instant teleportation
- Added error handling for misconfigured messages in plugin.yml
- Home waypoint icons can no longer be set with items containing metadata
- Discovered waypoints will no longer be accessible if discovery mode is disabled
  and player lacks access permission
- Fixed bug that made it sometimes difficult to target waypoints for configuration

1.2.0 (07/14/2014):
- Added respawn handling, which is configurable in config.yml
    Players with "wp.respawn" permission can set their respawn point to a home waypoint by right-clicking one
    while sneaking and holding a Waypoint Beacon (both beacons and respawn handling must be enabled)
- Added sound effects to teleportation and interactive home waypoint configuration
- The maximum amount of home waypoints is now configurable in config.yml as "MAX_HOME_WAYPOINTS"
- Config.yml is now properly saved with defaults for new options
- Added wp.toggle as child permission to wp.admin

1.1.0 (07/07/2014):
- Waypoints can now be enabled/disabled with "/wp toggle"
    Disabled waypoints will show up in list as disabled
    Players with "wp.bypass" permission will still be able to travel to disabled waypoints
- Added item "Waypoint Beacon"; recipe is a compass in the center of a workbench surrounded by redstone
    Players with the permission "wp.beacon.use" can right-click while holding it to open directory
    "wp.beacon.server" will allow players to see server-defined waypoints with the beacon
    "wp.beacon.unlimited" will prevent the beacon from being consumed on use